objects/Venue__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Venues (Contact #2)</relationshipLabel>
        <relationshipName>Venues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact #3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Venues (Contact #3)</relationshipLabel>
        <relationshipName>Venues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Information__c</fullName>
        <label>Location Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_to_Venue__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;+  Street_Address_1__c  + &quot;, &quot; +  City__c  + &quot;, &quot; +  State__c  + &quot; &quot; +   Postal_Code_Zip__c  + &quot; &quot; +   Country__c  , &quot;Google Map&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map to Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Zip__c</fullName>
        <label>Postal Code/Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Title__c</fullName>
        <formula>Primary_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Venues</relationshipLabel>
        <relationshipName>Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address #1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address #2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Capacity__c</fullName>
        <label>Venue Capacity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue_Type__c</fullName>
        <label>Venue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Convention Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>